test/corpus/blocks.txt
================
Empty block
================

{}

---

(source_file
  (block))

================
Nested blocks
================

{
  {
    {}
  }
}

---

(source_file
  (block
    (statement
      (block
        (statement
          (block))))))
